--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -9,3 +9,4 @@
 </ul>
 
 <p><%= link_to 'Editer les horaires', edit_shop_path(@shop) %> </p>
+<p><%= link_to 'Liste des magasins', shops_path %> </p>
