--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -1,8 +1,11 @@
 <h1>Liste des magasins</h1>
 <ul>
   <% @shops.each do |shop| %>
-    <li><%= shop.name %></li>
-    <p><%= link_to 'Voir les horaires', shop_path(shop) %> </p>
-    <p><%= link_to 'Editer les horaires', edit_shop_path(shop) %> </p>
+      <li>
+        <p><%= shop.name  %> </p>
+        <p><%= link_to 'Voir les horaires', shop_path(shop) %> </p>
+        <p><%= link_to 'Editer les horaires', edit_shop_path(shop) %> </p>
+      </li>
+    </div>
   <% end %>
 </ul>
