add link to sshop creation

--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -17,3 +17,4 @@
 
 <p><%= link_to 'Editer les horaires', edit_shop_path(@shop) %> </p>
 <p><%= link_to 'Liste des magasins', shops_path %> </p>
+<p><%= link_to 'Ajouter un nouveau magasin', new_shop_path %> </p>
